add support for file descriptors
