# trs_filer/api/additions.openapi.yaml
@@ -343,3 +343,54 @@ components:
           type: array
           items:
             type: string
+        files:
+          description: Properties and (pointers to) contents of files associated with a tool.
+          type: array
+          items:
+            $ref: "#/components/schemas/Files"
+    FileWrapper:
+      type: object
+      description: >
+        A file provides content for one of
+
+        - A tool descriptor is a metadata document that describes one or more tools.
+
+        - A tool document that describes how to test with one or more sample test
+
+        JSON.
+
+        - A containerfile is a document that describes how to build a particular
+
+        container image. Examples include Dockerfiles for creating Docker images
+
+        and Singularity recipes for Singularity images
+      properties:
+        content:
+          type: string
+          description: The content of the file itself. One of url or content is required.
+        checksum:
+          type: array
+          items:
+            $ref: "#/components/schemas/Checksum"
+          description: "A production (immutable) tool version is required to have a
+            hashcode. Not required otherwise, but might be useful to detect
+            changes. "
+          example:
+            - checksum: ea2a5db69bd20a42976838790bc29294df3af02b
+              type: sha1
+        url:
+          type: string
+          description: Optional url to the underlying content, should include version
+            information, and can include a git hash.  Note that this URL should
+            resolve to the raw unwrapped content that would otherwise be
+            available in content. One of url or content is required.
+          example:
+            url: https://raw.githubusercontent.com/ICGC-TCGA-PanCancer/pcawg_delly_workflow/ea2a5db69bd20a42976838790bc29294df3af02b/delly_docker/Delly.cwl
+    Files:
+      description: Properties and (a pointer to the) contents of a file.
+      type: object
+      properties:
+        toolFile:
+          $ref: '#/components/schemas/ToolFile'
+        fileWrapper:
+          $ref: '#/components/schemas/FileWrapper'
